CRUD for Representants route
